# zkkodb

./: .gitignore  CMakeLists.txt  README.md
src/core/: CMakeLists.txt
src/utils/: CMakeLists.txt
zkkodb/: Cargo.toml
zkkodb/src/: lib.rs  parser.rs
zkkodb/src/zkkodb_tests/: parser_tests.rs
